--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Flask-Moment==1.0.5
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
 greenlet==2.0.2
+gunicorn==21.2.0
 h11==0.8.1
 h2==3.2.0
 hpack==3.0.0
